apply in better order to handle dependencies

--- a/docs/_includes/commands.html
+++ b/docs/_includes/commands.html
@@ -114,7 +114,7 @@ spec:
               <div class="commands">
 {% highlight ruby %}
 name "demo-web"
-namespace "demo"
+namespace "default"
 labels(app: name, extra: extra)
 
 replicas 1
