--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -33,9 +33,10 @@
     <ul id="docs">
       <li><a href="{% link _docs/intro.md %}">Intro</a>
         <ul>
-          <li><a href="{% link _docs/intro/how-kubes-works.md %}">How It Works</a></li>
+          <li><a href="{% link _docs/intro/how-kubes-works.md %}">How Kubes Works</a></li>
           <li><a href="{% link _docs/intro/concepts.md %}">Concepts</a></li>
           <li><a href="{% link _docs/intro/structure.md %}">Structure</a></li>
+          <li><a href="{% link _docs/intro/ordering.md %}">Ordering</a></li>
           <li><a href="{% link _docs/intro/install.md %}">Install</a></li>
         </ul>
       </li>
