--- a/lib/templates/base/.kubes/config.rb.tt
+++ b/lib/templates/base/.kubes/config.rb.tt
@@ -4,4 +4,6 @@ Kubes.configure do |config|
   # auto-switching
   # config.kubectl.context = "dev-services"
   # config.kubectl.context_keep = true # keep context after switching
+  # config.kubectl.exit_on_fail_for_apply  = true # whether or not continue if the kubectl command fails
+  # config.kubectl.exit_on_fail_for_delete = false # whether or not continue if the kubectl command fails
 end
