--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="top-bar">
   <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-    <a class="navbar-brand" href="/"><img class="navbar-logo" src="/img/logos/filler-logo.png" /></a>
+    <a class="navbar-brand" href="/"><img class="navbar-logo" src="/img/logos/filler-logo.png" /> Kubes</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
