--- a/lib/templates/yaml/.kubes/resources/web/service.yaml.tt
+++ b/lib/templates/yaml/.kubes/resources/web/service.yaml.tt
@@ -1,16 +1,17 @@
----
 apiVersion: v1
 kind: Service
 metadata:
-  name: demo-web
+  name: <%= app %>
   labels:
-    app: demo-web
+    app: <%= app %>
+    role: web
   namespace: default
 spec:
   ports:
   - port: 80
     protocol: TCP
-    targetPort: 8080
+    targetPort: 80
   selector:
-    app: demo-web
+    app: <%= app %>
+    role: web
   type: ClusterIP
