update docs, fix templates

--- a/docs/_includes/commands.html
+++ b/docs/_includes/commands.html
@@ -71,9 +71,9 @@ Successfully built 1c5b10652c36
 Compiled  .kubes/resources files
 Deploying kubes files
 => kubectl apply -f .kubes/output/web/service.yaml
-service/web created
+service/demo-web created
 => kubectl apply -f .kubes/output/web/deployment.yaml
-deployment.apps/web created
+deployment.apps/demo-web created
 => kubectl apply -f .kubes/output/web/ingress.yaml
 ingress.networking.k8s.io/demo-web created
 $
