--- a/lib/templates/yaml/.kubes/resources/web/service.yaml.tt
+++ b/lib/templates/yaml/.kubes/resources/web/service.yaml.tt
@@ -1,9 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: <%= app %>
+  name: <%= app %>-web
   labels:
-    app: <%= app %>
     role: web
   namespace: default
 spec:
@@ -12,6 +11,5 @@ spec:
     protocol: TCP
     targetPort: 80
   selector:
-    app: <%= app %>
     role: web
   type: ClusterIP
