--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -44,13 +44,6 @@
           <li><a href="{% link _docs/intro/install.md %}">Install</a></li>
         </ul>
       </li>
-      <li><a href="{% link _docs/config.md %}">Config</a>
-        <ul>
-          <li><a href="{% link _docs/config/docker.md %}">Docker</a></li>
-          <li><a href="{% link _docs/config/env.md %}">Env</a></li>
-          <li><a href="{% link _docs/config/kubectl.md %}">Kubectl</a></li>
-        </ul>
-      </li>
       <li><a href="{% link _docs/resources.md %}">Resources</a>
         <ul>
           <li><a href="{% link _docs/resources/role.md %}">Role</a></li>
@@ -58,15 +51,14 @@
           <li><a href="{% link _docs/resources/shared.md %}">Shared</a></li>
         </ul>
       </li>
-      <li><a href="{% link _docs/layering.md %}">Layering</a>
+      <li><a href="{% link _docs/config.md %}">Config</a>
         <ul>
-          <li><a href="{% link _docs/layering/yaml.md %}">YAML</a></li>
-          <li><a href="{% link _docs/layering/dsl.md %}">DSL</a></li>
-          <li><a href="{% link _docs/layering/merge.md %}">Merge Behavior</a></li>
+          <li><a href="{% link _docs/config/docker.md %}">Docker</a></li>
+          <li><a href="{% link _docs/config/env.md %}">Env</a></li>
+          <li><a href="{% link _docs/config/kubectl.md %}">Kubectl</a></li>
         </ul>
       </li>
       <li><a href="{% link _docs/yaml.md %}">YAML</a></li>
-      <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
       <li><a href="{% link _docs/dsl.md %}">DSL</a>
         <ul>
           <li><a href="{% link _docs/dsl/backend-config.md %}">BackendConfig</a></li>
@@ -78,6 +70,14 @@
           <li><a href="{% link _docs/dsl/service.md %}">Service</a></li>
         </ul>
       </li>
+      <li><a href="{% link _docs/layering.md %}">Layering</a>
+        <ul>
+          <li><a href="{% link _docs/layering/yaml.md %}">YAML</a></li>
+          <li><a href="{% link _docs/layering/dsl.md %}">DSL</a></li>
+          <li><a href="{% link _docs/layering/merge.md %}">Merge Behavior</a></li>
+        </ul>
+      </li>
+      <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
       <li><a href="{% link _docs/patterns.md %}">Patterns</a>
         <ul>
           <li><a href="{% link _docs/patterns/clock-web-worker.md %}">Clock Web Worker</a></li>
@@ -89,6 +89,7 @@
           <li><a href="{% link _docs/extra-env/dsl.md %}">DSL</a></li>
         </ul>
       </li>
+      <li><a href="{% link _docs/kustomize.md %}">Kustomize Support</a></li>
       <li><a href="{% link _docs/auto-context.md %}">Auto Context</a></li>
       <li>More
         <ul class="more">
