generic resource with general field method to handle generic cases

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -64,6 +64,7 @@
           <li><a href="{% link _docs/dsl/backend-config.md %}">BackendConfig</a></li>
           <li><a href="{% link _docs/dsl/config-map.md %}">ConfigMap</a></li>
           <li><a href="{% link _docs/dsl/deployment.md %}">Deployment</a></li>
+          <li><a href="{% link _docs/dsl/generic.md %}">Generic</a></li>
           <li><a href="{% link _docs/dsl/ingress.md %}">Ingress</a></li>
           <li><a href="{% link _docs/dsl/managed-certificate.md %}">ManagedCertificate</a></li>
           <li><a href="{% link _docs/dsl/secret.md %}">Secret</a></li>
