--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -61,14 +61,22 @@
       <li><a href="{% link _docs/yaml.md %}">YAML</a></li>
       <li><a href="{% link _docs/dsl.md %}">DSL</a>
         <ul>
-          <li><a href="{% link _docs/dsl/backend-config.md %}">BackendConfig</a></li>
-          <li><a href="{% link _docs/dsl/config-map.md %}">ConfigMap</a></li>
-          <li><a href="{% link _docs/dsl/deployment.md %}">Deployment</a></li>
-          <li><a href="{% link _docs/dsl/generic.md %}">Generic</a></li>
-          <li><a href="{% link _docs/dsl/ingress.md %}">Ingress</a></li>
-          <li><a href="{% link _docs/dsl/managed-certificate.md %}">ManagedCertificate</a></li>
-          <li><a href="{% link _docs/dsl/secret.md %}">Secret</a></li>
-          <li><a href="{% link _docs/dsl/service.md %}">Service</a></li>
+          <li><a href="{% link _docs/dsl/resources.md %}">Resources</a>
+            <ul>
+              <li><a href="{% link _docs/dsl/resources/backend-config.md %}">BackendConfig</a></li>
+              <li><a href="{% link _docs/dsl/resources/config-map.md %}">ConfigMap</a></li>
+              <li><a href="{% link _docs/dsl/resources/daemon-set.md %}">DaemonSet</a></li>
+              <li><a href="{% link _docs/dsl/resources/deployment.md %}">Deployment</a></li>
+              <li><a href="{% link _docs/dsl/resources/generic.md %}">Generic</a></li>
+              <li><a href="{% link _docs/dsl/resources/ingress.md %}">Ingress</a></li>
+              <li><a href="{% link _docs/dsl/resources/managed-certificate.md %}">ManagedCertificate</a></li>
+              <li><a href="{% link _docs/dsl/resources/network-policy.md %}">NetworkPolicy</a></li>
+              <li><a href="{% link _docs/dsl/resources/pod.md %}">Pod</a></li>
+              <li><a href="{% link _docs/dsl/resources/secret.md %}">Secret</a></li>
+              <li><a href="{% link _docs/dsl/resources/service.md %}">Service</a></li>
+            </ul>
+          </li>
+          <li><a href="{% link _docs/dsl/multiple-resources.md %}">Multiple Resources</a>
         </ul>
       </li>
       <li><a href="{% link _docs/layering.md %}">Layering</a>
