add Dockerfile for kubes as a docker entrypoint

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -93,6 +93,11 @@
       </li>
       <li><a href="{% link _docs/kustomize.md %}">Kustomize Support</a></li>
       <li><a href="{% link _docs/auto-context.md %}">Auto Context</a></li>
+      <li>CI/CD
+        <ul>
+          <li><a href="{% link _docs/ci/cloudbuild.md %}">CloudBuild</a></li>
+        </ul>
+      </li>
       <li>More
         <ul class="more">
           <li><a href="{% link support.md %}">Support</a></li>
