use config.builder instead

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -56,7 +56,7 @@
           <li><a href="{% link _docs/config/docker.md %}">Docker</a></li>
           <li><a href="{% link _docs/config/env.md %}">Env</a></li>
           <li><a href="{% link _docs/config/kubectl.md %}">Kubectl</a></li>
-          <li><a href="{% link _docs/config/build-strategy.md %}">Build Strategy</a></li>
+          <li><a href="{% link _docs/config/builder.md %}">Builder</a></li>
         </ul>
       </li>
       <li><a href="{% link _docs/yaml.md %}">YAML</a></li>
