--- a/docs/_includes/commands.html
+++ b/docs/_includes/commands.html
@@ -20,6 +20,8 @@ kubes compile
 kubes deploy
 kubes apply
 kubes get
+kubes exec
+kubes logs
 kubes delete -y
 {% endhighlight %}
               </div>
