init namespace option

--- a/lib/templates/dsl/.kubes/resources/base/all.rb.tt
+++ b/lib/templates/dsl/.kubes/resources/base/all.rb.tt
@@ -1,2 +1,7 @@
-namespace "<%= app %>"
+<%
+unless namespace == "default"
+  namespace_line = %Q|namespace "#{namespace}"|
+end
+-%>
+<%= namespace_line if namespace_line -%>
 labels(app: "<%= app %>")
