fix namespace newline and logs for single container

--- a/lib/templates/dsl/.kubes/resources/base/all.rb.tt
+++ b/lib/templates/dsl/.kubes/resources/base/all.rb.tt
@@ -1,6 +1,6 @@
 <%
 unless namespace == "default"
-  namespace_line = %Q|namespace "#{namespace}"|
+  namespace_line = %Q|namespace "#{namespace}"\n|
 end
 -%>
 <%= namespace_line if namespace_line -%>
