add separate steps docs

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -92,8 +92,12 @@
           <li><a href="{% link _docs/extra-env/dsl.md %}">DSL</a></li>
         </ul>
       </li>
-      <li><a href="{% link _docs/kustomize.md %}">Kustomize Support</a></li>
-      <li><a href="{% link _docs/auto-context.md %}">Auto Context</a></li>
+      <li>Misc
+        <ul>
+          <li><a href="{% link _docs/misc/kustomize.md %}">Kustomize Support</a></li>
+          <li><a href="{% link _docs/misc/separate-steps.md %}">Separate Steps</a></li>
+          <li><a href="{% link _docs/misc/auto-context.md %}">Auto Context</a></li>
+        </ul>
       <li>CI/CD
         <ul>
           <li><a href="{% link _docs/ci/cloudbuild.md %}">CloudBuild</a></li>
