--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -55,7 +55,12 @@
         <ul>
           <li><a href="{% link _docs/config/docker.md %}">Docker</a></li>
           <li><a href="{% link _docs/config/env.md %}">Env</a></li>
-          <li><a href="{% link _docs/config/kubectl.md %}">Kubectl</a></li>
+          <li><a href="{% link _docs/config/kubectl.md %}">Kubectl</a>
+            <ul>
+              <li><a href="{% link _docs/config/kubectl/args.md %}">Args</a></li>
+              <li><a href="{% link _docs/config/kubectl/hooks.md %}">Hooks</a></li>
+            </ul>
+          </li>
           <li><a href="{% link _docs/config/builder.md %}">Builder</a></li>
         </ul>
       </li>
