small fixes: show pod and fetch items nil

--- a/lib/templates/yaml/.kubes/resources/web/deployment.yaml.tt
+++ b/lib/templates/yaml/.kubes/resources/web/deployment.yaml.tt
@@ -5,7 +5,7 @@ metadata:
   labels:
     role: web
 spec:
-  replicas: 1
+  replicas: 1  # overridden on a env basis
   selector:
     matchLabels:
       role: web
