--- a/docs/_sass/theme.scss
+++ b/docs/_sass/theme.scss
@@ -291,3 +291,27 @@ ul.toc {
     padding: 20px;
   }
 }
+
+// https://coolestguidesontheplanet.com/videodrome/youtube/
+// I added another box wrapper to control the width
+.video-box {
+  max-width: 600px;
+  text-align: left;
+  margin: 0 auto 0 0;
+  padding-bottom: 20px;
+  .video-container {
+    position:relative;
+    padding-bottom:56.25%;
+    padding-top:30px;
+    height:0;
+    overflow:hidden;
+  }
+
+  .video-container iframe, .video-container object, .video-container embed {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+  }
+}
