add secrets pattern docs

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -100,8 +100,9 @@
       <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
       <li><a href="{% link _docs/patterns.md %}">Patterns</a>
         <ul>
-          <li><a href="{% link _docs/patterns/migrations.md %}">Database Migrations</a></li>
           <li><a href="{% link _docs/patterns/clock-web-worker.md %}">Clock Web Worker</a></li>
+          <li><a href="{% link _docs/patterns/migrations.md %}">Database Migrations</a></li>
+          <li><a href="{% link _docs/patterns/secrets.md %}">Secrets</a></li>
         </ul>
       </li>
       <li><a href="{% link _docs/extra-env.md %}">Extra Env</a>
