--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -100,9 +100,10 @@
       <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
       <li><a href="{% link _docs/patterns.md %}">Patterns</a>
         <ul>
-          <li><a href="{% link _docs/patterns/clock-web-worker.md %}">Clock Web Worker</a></li>
-          <li><a href="{% link _docs/patterns/migrations.md %}">Database Migrations</a></li>
-          <li><a href="{% link _docs/patterns/secrets.md %}">Secrets</a></li>
+          {% assign docs = site.docs | where: "categories","patterns" %}
+          {% for doc in docs -%}
+            <li><a href="{{ doc.url }}">{{ doc.nav_text }}</a></li>
+          {% endfor %}
         </ul>
       </li>
       <li><a href="{% link _docs/extra-env.md %}">Extra Env</a>
