custom helpers support

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -99,6 +99,7 @@
       </li>
       <li><a href="{% link _docs/helpers.md %}">Helpers</a>
         <ul>
+          <li><a href="{% link _docs/helpers/custom.md %}">Custom</a></li>
           <li><a href="{% link _docs/helpers/aws.md %}">AWS</a>
             <ul>
               {% assign docs = site.docs | where: "categories","helpers-aws" %}
