change default kubes exec command to sh

--- a/lib/templates/base/.kubes/config.rb.tt
+++ b/lib/templates/base/.kubes/config.rb.tt
@@ -2,7 +2,7 @@ Kubes.configure do |config|
   config.repo = "<%= @options[:repo] %>"
   config.logger.level = "info"
   # auto-switching
-  # config.kubectl.context = "dev-services"
+  # config.kubectl.context = "dev-cluster"
   # config.kubectl.context_keep = true # keep context after switching
   # config.kubectl.exit_on_fail_for_apply  = true # whether or not continue if the kubectl command fails
   # config.kubectl.exit_on_fail_for_delete = false # whether or not continue if the kubectl command fails
