--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -42,6 +42,7 @@
             </ul>
           </li>
           <li><a href="{% link _docs/intro/install.md %}">Install</a></li>
+          <li><a href="{% link _docs/intro/docker-image.md %}">Docker Image</a></li>
         </ul>
       </li>
       <li><a href="{% link _docs/resources.md %}">Resources</a>
@@ -76,6 +77,7 @@
           <li><a href="{% link _docs/config/reference.md %}">Reference</a></li>
         </ul>
       </li>
+      <li><a href="{% link _docs/generators.md %}">Generators</a></li>
       <li><a href="{% link _docs/yaml.md %}">YAML</a></li>
       <li><a href="{% link _docs/layering.md %}">Layering</a>
         <ul>
