fix docker repo registry repo_auto_auth config

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -173,6 +173,12 @@
           <li><a href="{% link _docs/extra-env/dsl.md %}">DSL</a></li>
         </ul>
       </li>
+      <li><a href="{% link _docs/plugins.md %}">Plugins</a>
+        <ul>
+          <li><a href="{% link _docs/plugins/aws.md %}">AWS</a></li>
+          <li><a href="{% link _docs/plugins/google.md %}">Google</a></li>
+        </ul>
+      </li>
       <li>Misc
         <ul>
           <li><a href="{% link _docs/misc/kustomize.md %}">Kustomize Support</a></li>
