multiple resources yaml support
* rework processing to support multiple yaml resource definitions
* endpoint resource support
* always use all singular
* endpoint generator

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -86,7 +86,12 @@
         </ul>
       </li>
       <li><a href="{% link _docs/generators.md %}">Generators</a></li>
-      <li><a href="{% link _docs/yaml.md %}">YAML</a></li>
+      <li><a href="{% link _docs/yaml.md %}">YAML</a>
+        <ul>
+          <li><a href="{% link _docs/yaml/multiple-resources.md %}">Multiple Resources</a></li>
+          <li><a href="{% link _docs/yaml/multiple-files.md %}">Multiple Files</a></li>
+        </ul>
+      </li>
       <li><a href="{% link _docs/layering.md %}">Layering</a>
         <ul>
           <li><a href="{% link _docs/layering/yaml.md %}">YAML</a></li>
