update example structures

--- a/docs/_includes/commands.html
+++ b/docs/_includes/commands.html
@@ -30,15 +30,14 @@ kubes delete -y
               <h3>Structure</h3>
               <div class="commands">
 {% highlight sh %}
-.kubes
-└── resources
-    ├── clock
-    │   └── deployment.yaml
-    ├── worker
-    │   └── deployment.yaml
-    └── web
-        ├── deployment.yaml
-        └── service.yaml
+.kubes/resources
+├── clock
+│   └── deployment.yaml
+├── worker
+│   └── deployment.yaml
+└── web
+    ├── deployment.yaml
+    └── service.yaml
 {% endhighlight %}
               </div>
             </div>
