add merger options docs

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -97,7 +97,8 @@
           <li><a href="{% link _docs/layering/yaml.md %}">YAML</a></li>
           <li><a href="{% link _docs/layering/dsl.md %}">DSL</a></li>
           <li><a href="{% link _docs/layering/mix.md %}">Mix</a></li>
-          <li><a href="{% link _docs/layering/merge.md %}">Merge Behavior</a></li>
+          <li><a href="{% link _docs/layering/merge-dsl.md %}">Merge DSL</a></li>
+          <li><a href="{% link _docs/layering/merge-options.md %}">Merge Options</a></li>
         </ul>
       </li>
       <li><a href="{% link _docs/dsl.md %}">DSL</a>
