--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -72,7 +72,7 @@
           </li>
           <li><a href="{% link _docs/config/hooks.md %}">Hooks</a>
             <ul>
-            {% assign docs = site.docs | where: "categories","hooks" %}
+            {% assign docs = site.docs | where: "categories","hooks" | sort: "order" %}
             {% for doc in docs -%}
               <li><a href="{{ doc.url }}">{{ doc.nav_text }}</a></li>
             {% endfor %}
