new hooks generate docs

--- a/lib/templates/yaml/.kubes/resources/base/deployment.yaml.tt
+++ b/lib/templates/yaml/.kubes/resources/base/deployment.yaml.tt
@@ -2,7 +2,9 @@ spec:
   selector:
     matchLabels:
       app: <%= app %>
+      env: <%= Kubes.env %>
   template:
     metadata:
       labels:
         app: <%= app %>
+        env: <%= Kubes.env %>
