--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,9 +27,11 @@
 </head>
 
 <body>
+  {% include banner/head.html %}
   {% include header.html %}
   {% include content.html %}
   {% include footer.html %}
+  {% include banner/foot.html %}
   {% include js.html %}
 </body>
 </html>
