central deployer support
* Kubes.app concept
* early boot hook
* app-level overrides support: config/env, variables, resources
* config.kubectl.context_keep = false
* dont write config skip files
* erb comment preprocessor
* kubes.skip metadata ability
* use .kubes/tmp/state to reduce ignored folders
* speed up docs build

--- a/docs/_includes/content.html
+++ b/docs/_includes/content.html
@@ -5,7 +5,7 @@
 {% else %}
 
 <div class="d-flex" id="wrapper">
-  {% include sidebar.html %}
+  {% include_cached sidebar.html %}
   <div id="content">
     <div class="menu-top-bar">
       <div id="menu-toggle">
