--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,6 +24,7 @@
   <script src="/vendor/jquery/jquery.min.js"></script>
   <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="/js/app.js"></script>
+  <script src="/js/scripts.js"></script>
 </head>
 
 <body>
