--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -239,7 +239,7 @@
     <h2>sidebar options:</h2>
     <ul class="list-unstyled">
       <li><a href="#" id="expand-all">expand all</a></li>
-      <li><a href="{{ site.gh_url }}/blob/master/docs/{{ page.path }}" target="_blank">edit page</a></li>
+      <li><a href="{{ site.gh_url }}/blob/master/docs/" id="edit-page" target="_blank">edit page</a></li>
     </ul>
   </div>
 </div>
